--- a/index.Rmd
+++ b/index.Rmd
@@ -28,6 +28,13 @@ Data were collected in dataframes from the camtraps at each desert site. Foundat
 
 ```{r, data, warning=FALSE, message=FALSE}
 library(tidyverse)
+cnm <- read_csv("data/2017 carrizo camtrap-veg.csv")
+cnm$camtrap.label <- as.character(cnm$camtrap.label)
+mnp <- read_csv("data/2017 MNP camtrap-veg.csv")
+
+sites <- bind_rows(cnm, mnp)
+sites <- sites %>%
+  mutate(volume = ((x + y)/2)^3*3.14*(1/3))
 
 
 ```
@@ -35,6 +42,32 @@ library(tidyverse)
 
 ###Viz
 ```{r, viz, warning=FALSE, message=FALSE}
+#map####
+require(ggmap)
+cali <- get_map(location = c(lon = -118, lat = 35), zoom = 7)
+p <-ggmap(cali)
+p + geom_point(data=sites, aes(x=long, y=lat), alpha = 0.5, size = 4) + labs(x ="longitude", y = "latitude")
+
+#foundation species sizes####
+ggplot(sites, aes(volume, fill = species)) +
+         geom_histogram(binwidth = 5) +
+  scale_fill_brewer(palette = "Set1") +
+  labs(fill = "", x = "volume (m2)", y = "frequency")
+
+ggplot(sites, aes(volume, fill = species)) +
+         geom_density() +
+  scale_fill_brewer(palette = "Set1") +
+  labs(fill = "", x = "volume (m2)", y = "frequency")
+
+ggplot(sites, aes(y, fill = species)) +
+         geom_histogram(binwidth = .5) +
+  scale_fill_brewer(palette = "Set1") +
+  labs(fill = "", x = "volume (m2)", y = "frequency")
+
+ggplot(sites, aes(y, fill = species)) +
+         geom_density() +
+  scale_fill_brewer(palette = "Set1") +
+  labs(fill = "", x = "height (m)", y = "frequency")
 
 ```
 
