--- a/index.Rmd
+++ b/index.Rmd
@@ -28,6 +28,7 @@ Data were collected in dataframes from the camtraps at each desert site. Foundat
 
 ```{r, data, warning=FALSE, message=FALSE}
 library(tidyverse)
+#sites
 cnm <- read_csv("data/2017 carrizo camtrap-veg.csv")
 cnm$camtrap.label <- as.character(cnm$camtrap.label)
 mnp <- read_csv("data/2017 MNP camtrap-veg.csv")
@@ -36,7 +37,17 @@ sites <- bind_rows(cnm, mnp)
 sites <- sites %>%
   mutate(volume = ((x + y)/2)^3*3.14*(1/3))
 
+#animals
+cnm.cams <- read_csv("data/2017 carrizo camtraps.csv")
+mnp.cams <- read_csv("data/2017 MNP camtraps.csv")
 
+cnm.cams$actual.time <- as.numeric(cnm.cams$actual.time)
+
+cnm.cams$temp <- as.numeric(cnm.cams$temp)
+
+
+mnp.cams$actual.time <- as.numeric(mnp.cams$actual.time)
+cams <- bind_rows(cnm.cams, mnp.cams)
 ```
 
 
