--- a/index.Rmd
+++ b/index.Rmd
@@ -28,6 +28,7 @@ Data were collected in dataframes from the camtraps at each desert site. Foundat
 
 ```{r, data, warning=FALSE, message=FALSE}
 library(tidyverse)
+library(skimr)
 #sites
 cnm <- read_csv("data/2017 carrizo camtrap-veg.csv")
 cnm$camtrap.label <- as.character(cnm$camtrap.label)
@@ -48,6 +49,14 @@ cnm.cams$temp <- as.numeric(cnm.cams$temp)
 
 mnp.cams$actual.time <- as.numeric(mnp.cams$actual.time)
 cams <- bind_rows(cnm.cams, mnp.cams)
+
+skim(cams)
+  
+
+#summary data
+data <- cams %>%
+  group_by(site, microsite, rep) %>%
+  summarise(captures = sum(animal.capture), n = n()) %>% mutate(rate = captures/n)
 ```
 
 
@@ -79,6 +88,15 @@ ggplot(sites, aes(y, fill = species)) +
          geom_density() +
   scale_fill_brewer(palette = "Set1") +
   labs(fill = "", x = "height (m)", y = "frequency")
+
+#camera traps####
+ggplot(data, aes(microsite, captures)) +
+  geom_boxplot() + 
+  labs(y = "total captures")
+
+ggplot(data, aes(microsite, rate)) +
+  geom_boxplot() +
+  labs(y = "camera capture rate")
 
 ```
 
