--- a/index.Rmd
+++ b/index.Rmd
@@ -29,7 +29,7 @@ Data were collected in dataframes from the camtraps at each desert site. Foundat
 ```{r, data, warning=FALSE, message=FALSE}
 library(tidyverse)
 library(skimr)
-#sites
+#sites & foundation species
 cnm <- read_csv("data/2017 carrizo camtrap-veg.csv")
 cnm$camtrap.label <- as.character(cnm$camtrap.label)
 mnp <- read_csv("data/2017 MNP camtrap-veg.csv")
@@ -37,26 +37,33 @@ mnp <- read_csv("data/2017 MNP camtrap-veg.csv")
 sites <- bind_rows(cnm, mnp)
 sites <- sites %>%
   mutate(volume = ((x + y)/2)^3*3.14*(1/3))
+sites$rep <- as.character(sites$rep)
 
 #animals
 cnm.cams <- read_csv("data/2017 carrizo camtraps.csv")
 mnp.cams <- read_csv("data/2017 MNP camtraps.csv")
 
 cnm.cams$actual.time <- as.numeric(cnm.cams$actual.time)
-
 cnm.cams$temp <- as.numeric(cnm.cams$temp)
 
 
 mnp.cams$actual.time <- as.numeric(mnp.cams$actual.time)
 cams <- bind_rows(cnm.cams, mnp.cams)
-
 skim(cams)
   
 
 #summary data
 data <- cams %>%
-  group_by(site, microsite, rep) %>%
+  group_by(site, microsite, week, rep) %>%
   summarise(captures = sum(animal.capture), n = n()) %>% mutate(rate = captures/n)
+data$rep <- as.character(data$rep)
+
+#add size data
+simpler.data <- data %>% rename(species = microsite) %>% filter(species != "open")
+simpler.sites <- sites %>%
+  select(species, week, rep, z, volume)
+full.data <- left_join(simpler.data, simpler.sites, by = c("species", "week", "rep"))
+
 ```
 
 
@@ -97,6 +104,11 @@ ggplot(data, aes(microsite, captures)) +
 ggplot(data, aes(microsite, rate)) +
   geom_boxplot() +
   labs(y = "camera capture rate")
+
+ggplot(full.data, aes(volume, captures, color = species)) +
+         geom_point() +
+  geom_smooth(method = lm) +
+  labs(color = "")
 
 ```
 
