--- a/index.Rmd
+++ b/index.Rmd
@@ -72,6 +72,28 @@ simpler.sites <- sites %>%
   select(species, week, rep, z, volume)
 full.data <- left_join(simpler.data, simpler.sites, by = c("species", "week", "rep"))
 
+#plant community at the sites
+cnm.veg <- read_csv("data/2017 carrizo veg.csv")
+mnp.veg <- read_csv("data/2017 mnp veg.csv")
+community <- bind_rows(cnm.veg, mnp.veg)
+
+#rii
+rii <- function(x, j, var)
+{
+s1 <- subset(x, microsite == "shrub", select=var)
+o1 <- subset(x, microsite == "open", select=var)
+return1 <- (s1 - o1) / (s1+o1)
+x1 <- x[seq(1, nrow(x), by = 2),]
+return2 <- cbind(x1[j], return1)
+return2[is.na(return2)] <- 0
+return2
+}
+
+x <- community %>%
+  select(site, species, microsite, percent.cover, abundance, richness)
+
+community.rii <- rii(x, 1:2, 4:6)
+
 ```
 
 
