--- a/index.Rmd
+++ b/index.Rmd
@@ -29,6 +29,7 @@ Data were collected in dataframes from the camtraps at each desert site. Foundat
 ```{r, data, warning=FALSE, message=FALSE}
 library(tidyverse)
 library(skimr)
+#source("functions.R")
 #sites & foundation species
 cnm <- read_csv("data/2017 carrizo camtrap-veg.csv")
 cnm$camtrap.label <- as.character(cnm$camtrap.label)
